Update to attempt fixing usercard image overflow on mobile view #1

--- a/src/css/ImageCSSModule.module.css
+++ b/src/css/ImageCSSModule.module.css
@@ -14,7 +14,8 @@
   .userAvatar {
     height: 20rem;
     width: 20rem;
-    padding: 2.5rem 0 0 0;
+    padding: 0;
+    margin: 2.5rem;
   }
 
   .userTitle {
